fix quality rating wrapping issue on mobile. Card 323

--- a/app/styles/components/results/_result_item.scss
+++ b/app/styles/components/results/_result_item.scss
@@ -43,7 +43,7 @@ $result-header-text-color: #999999;
   }
   .result-item-header-left {
     float: left;
-    width: 80%;
+    width: 100%;
 
     .field {
       display: inline-block;
